# langchain-ai-agents

./: .gitignore  1_agent_loop_langchain_tool_calling.py  2_agent_loop_langchain_tool_calling.py  README.md  bootstrap_ubuntu_server.sh  chains.py  ingestion.py  justfile  langchain_client.py  main.py  nodes.py  pyproject.toml  react.py
backend/: core.py
graph/: consts.py  graph.py  state.py  state_graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/notes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
