[project]
name = "langchain-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "langchain[openai]>=1.2.10",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "mcp>=1.26.0",
]
